--- a/src/blocks/page/page.sass
+++ b/src/blocks/page/page.sass
@@ -21,8 +21,6 @@ $main-color: #5101A6
   font-style: normal
 
 .page
-  // background: #000002
-  // background: #0B0B0B
   background: #ffffff
   color: #000000
   margin: 0
@@ -47,16 +45,14 @@ $main-color: #5101A6
     max-width: 1217px
     padding-bottom: 40px
   &__intro
-    min-height: 680px
+    max-height: 680px
     display: flex
-    flex-direction: column
     justify-content: center
-    align-items: flex-start
+    align-items: flex-end
     width: 100%
     margin: 0 auto
     max-width: 1217px
   &__features
-    // min-height: 764px
     min-height: 644px
     padding: 47px 0 96px
     max-width: 1277px
@@ -71,21 +67,6 @@ $main-color: #5101A6
     text-align: center
   &__footer
     min-height: 50px
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
